# desk_control

./: .gitignore  CMakeLists.txt  Info.plist  README.md  application.qrc
src/: main.cpp
src/Bluetooth/Model/: Desk.cpp  Desk.h
src/Bluetooth/Service/: BluetoothController.cpp  BluetoothController.h  BluetoothScanner.cpp  BluetoothScanner.h  TargetHeightMovementService.cpp  TargetHeightMovementService.h
src/Config/: ConfigStorage.cpp  ConfigStorage.h
src/Config/Devices/: DeviceConfigStorage.cpp  DeviceConfigStorage.h
src/Config/Model/: Config.cpp  Config.h
src/Gui/DeviceScanWindow/: DeviceScanWindow.cpp  DeviceScanWindow.h  DeviceScanWindow.ui
src/Gui/MainWindow/: MainWindow.cpp  MainWindow.h  MainWindow.ui  TrayPositionListView.cpp  TrayPositionListView.h
src/Gui/Model/: DeskModel.cpp  DeskModel.h  Position.cpp  Position.h  PositionModel.cpp  PositionModel.h
